# test

./: .env  .env-example  .gitignore  README.md  pyproject.toml  requirements.txt
bot/config/: config.py
bot/core/: notpxbot.py  registrator.py  tg_mini_app_auth.py
bot/core/canvas_updater/: centrifuge.js  centrifuge.py  client_pb2.py  dynamic_canvas_renderer.py  exceptions.py  websocket_manager.py
bot/core/poh_solver/: main.js  wasm_handler.js
bot/core/task_solver/: main.js
bot/utils/: accounts_manager.py  json_manager.py  launcher.py  logger.py  ua_generator.py
bot/utils/task_solver/: main.js
windows_scripts/: install.ps1  uninstall.ps1
