[tool.poetry]
name = "notpixelbot"
version = "0.1.0"
description = "Bot for automation Not Pixel telegram mini app"
authors = ["Dellenoam", "YourLov3r"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"
pydantic-settings = "^2.5.2"
argparse = "^1.4.0"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
better-proxy = "^1.2.0"
aiohttp-proxy = "^0.1.2"
colorlog = "^6.8.2"
brotli = "^1.1.0"


[tool.poetry.group.dev.dependencies]
vermin = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
